testsuite/poke.pkl/printf-diag-21.pk
/* { dg-do compile } */

printf ("%f32bAB", 1U); /* { dg-error "" } */
